Tested visibility on focus functionality using focusin/out

--- a/code-snippets/slider-multi-handles/range-slider.css
+++ b/code-snippets/slider-multi-handles/range-slider.css
@@ -107,3 +107,17 @@ html:not([dir=rtl]) .DxRangeSlider.noUi-horizontal.DxRangeSlider--small-handles 
 .DxRangeSlider--dark {
   border: 5px solid red;
 }
+
+
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  white-space: nowrap;
+}
