--- a/code-snippets/slider-multi-handles/range-slider.css
+++ b/code-snippets/slider-multi-handles/range-slider.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 50px 10px;
+  padding: 50px 200px;
   background-color: white;
   /* background: gray; */
   /* background: url(http://placekitten.com/g/800/200) no-repeat; */
@@ -66,7 +66,7 @@ html:not([dir=rtl]) .DxRangeSlider.noUi-horizontal .noUi-handle {
 }
 
 .DxRangeSlider.noUi-state-tap .DxRangeSlider__custom-connect {
-  transition: width .3s;
+  transition: all .3s;
 }
 
 .DxRangeSlider .noUi-touch-area {
@@ -110,7 +110,7 @@ html:not([dir=rtl]) .DxRangeSlider.noUi-horizontal.DxRangeSlider--small-handles 
 
 
 
-.visually-hidden {
+.Xvisually-hidden {
   position: absolute;
   overflow: hidden;
   clip: rect(0 0 0 0);
